--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,7 @@ jobs:
           extensions: mbstring, intl, xdebug
       - name: Install Composer dependencies
         run: composer install --prefer-dist --no-progress
+        working-directory: wp-content/plugins/wp-qr-trackr
       - name: PHP_CodeSniffer (WordPress)
         run: |
           composer global require "squizlabs/php_codesniffer=*"
@@ -69,6 +70,7 @@ jobs:
           extensions: mbstring, intl, xdebug
       - name: Install Composer dependencies
         run: composer install --prefer-dist --no-progress
+        working-directory: wp-content/plugins/wp-qr-trackr
       - name: Run PHPUnit
         run: ./vendor/bin/phpunit --coverage-clover=coverage.xml
       - name: Upload coverage to Codecov
@@ -84,6 +86,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Composer Audit
         run: composer audit || true
+        working-directory: wp-content/plugins/wp-qr-trackr
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
