--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.13",
-        "wp-coding-standards/wpcs": "^3.1"
+        "wp-coding-standards/wpcs": "^3.1",
+        "endroid/qr-code": "^5.0"
     },
     "config": {
         "allow-plugins": {
