--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.13",
         "wp-coding-standards/wpcs": "^3.1",
-        "endroid/qr-code": "^5.0"
+        "endroid/qr-code": "^5.0",
+        "phpunit/phpunit": "^9.5"
     },
     "config": {
         "allow-plugins": {
