--- a/wp-content/plugins/wp-qr-trackr/package.json
+++ b/wp-content/plugins/wp-qr-trackr/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "lint": "eslint .",
+    "lint": "eslint . --ignore-path .eslintignore",
     "stylelint": "stylelint \"**/*.css\""
   },
   "devDependencies": {
