chore(pre-commit): only lint staged JS source files, exclude config, and document standards\n\n- Pre-commit hook now excludes eslint.config.js from JS linting\n- Updated README with 'Final Few Items' section documenting robust, standards-compliant workflow

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "husky": "^9.1.7"
   },
   "scripts": {
-    "setup:ci": "yarn install && npx husky install"
+    "setup:ci": "yarn install && npx husky install",
+    "lint": "cd wp-content/plugins/wp-qr-trackr && yarn lint"
   }
 }
