chore(phpcs): use local Composer PHPCS for portability and standards compliance\n\n- Adds squizlabs/php_codesniffer as dev dependency\n- Updates CI to use vendor/bin/phpcs, not global\n- Adds Composer phpcs script\n- Documents best practice in README for all contributors (Mac, Linux, CI)

--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,6 @@
         "allow-plugins": {
             "dealerdirect/phpcodesniffer-composer-installer": true
         }
-    }
+    },
+    "phpcs": "vendor/bin/phpcs --standard=wp-content/plugins/wp-qr-trackr/phpcs.xml --report=full wp-content/plugins/wp-qr-trackr"
 }
