--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,14 +23,14 @@ jobs:
         run: composer install --prefer-dist --no-progress
       - name: PHP_CodeSniffer (WordPress)
         run: |
-          composer global require "squizlabs/php_codesniffer=*"
+          composer install --prefer-dist --no-progress
           cd wp-content/plugins/wp-qr-trackr
-          phpcs --standard=phpcs.xml --report=full .
+          ../../vendor/bin/phpcs --standard=phpcs.xml --report=full .
       - name: PHP_CodeSniffer (Tests Only)
         run: |
-          composer global require "squizlabs/php_codesniffer=*"
+          composer install --prefer-dist --no-progress
           cd wp-content/plugins/wp-qr-trackr
-          phpcs --standard=phpcs.xml --report=full tests
+          ../../vendor/bin/phpcs --standard=phpcs.xml --report=full tests
 
   lint-js:
     name: JS Lint
