fix: resolve CI/CD phpcs path error in GitHub Actions workflow - Fix incorrect phpcs binary path in .github/workflows/ci.yml - Change from ../../vendor/bin/phpcs to ../../../vendor/bin/phpcs - Plugin directory is 3 levels deep from repository root - Update phpcs config file path from phpcs.xml to ../../../.phpcs.xml - Add --extensions=php flag to prevent memory issues with large JS files - Add comprehensive troubleshooting documentation in TROUBLESHOOTING.md - New CI/CD & GitHub Actions Issues section - Directory structure diagram and path explanation - Complete workflow example with correct paths - Resolves: 'No such file or directory' error in GitHub Actions CI pipeline

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,12 +25,12 @@ jobs:
         run: |
           composer install --prefer-dist --no-progress
           cd wp-content/plugins/wp-qr-trackr
-          ../../vendor/bin/phpcs --standard=phpcs.xml --report=full .
+          ../../../vendor/bin/phpcs --standard=../../../.phpcs.xml --report=full --extensions=php .
       - name: PHP_CodeSniffer (Tests Only)
         run: |
           composer install --prefer-dist --no-progress
           cd wp-content/plugins/wp-qr-trackr
-          ../../vendor/bin/phpcs --standard=phpcs.xml --report=full tests
+          ../../../vendor/bin/phpcs --standard=../../../.phpcs.xml --report=full --extensions=php tests
 
   lint-js:
     name: JS Lint
