ci: fix PHPUnit config and coverage path for GitHub Actions\n\n- Updated test-phpunit job to specify --configuration and correct coverage output path.\n- Ensures PHPUnit runs with the right config and coverage is uploaded to Codecov.\n\nSee PR for details.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,11 +80,11 @@ jobs:
       - name: Install Composer dependencies
         run: composer install --prefer-dist --no-progress
       - name: Run PHPUnit
-        run: ./vendor/bin/phpunit --coverage-clover=coverage.xml
+        run: ./vendor/bin/phpunit --configuration=wp-content/plugins/wp-qr-trackr/phpunit.xml --coverage-clover=wp-content/plugins/wp-qr-trackr/coverage.xml
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
         with:
-          files: ./coverage.xml
+          files: ./wp-content/plugins/wp-qr-trackr/coverage.xml
         continue-on-error: true
 
   audit-deps:
