--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,6 +79,22 @@ jobs:
           extensions: mbstring, intl, xdebug
       - name: Install Composer dependencies
         run: composer install --prefer-dist --no-progress
+      - name: Set up MySQL
+        run: |
+          sudo service mysql start
+          sudo mysql -e "CREATE USER 'root'@'localhost' IDENTIFIED BY 'root';"
+          sudo mysql -e "GRANT ALL PRIVILEGES ON *.* TO 'root'@'localhost' WITH GRANT OPTION;"
+          sudo mysql -e "FLUSH PRIVILEGES;"
+      - name: Install WP-CLI
+        run: |
+          curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
+          chmod +x wp-cli.phar
+          sudo mv wp-cli.phar /usr/local/bin/wp
+      - name: Install WordPress
+        run: |
+          wp core download --version=latest --path=wp
+          wp config create --dbname=wordpress_test --dbuser=root --dbpass=root --dbhost=127.0.0.1 --path=wp
+          wp db create --path=wp
       - name: Run PHPUnit
         run: ./vendor/bin/phpunit --configuration=wp-content/plugins/wp-qr-trackr/phpunit.xml --coverage-clover=wp-content/plugins/wp-qr-trackr/coverage.xml
       - name: Upload coverage to Codecov
