--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,10 +81,9 @@ jobs:
         run: composer install --prefer-dist --no-progress
       - name: Set up MySQL
         run: |
-          sudo service mysql start
-          sudo mysql -e "CREATE USER 'root'@'localhost' IDENTIFIED BY 'root';"
-          sudo mysql -e "GRANT ALL PRIVILEGES ON *.* TO 'root'@'localhost' WITH GRANT OPTION;"
-          sudo mysql -e "FLUSH PRIVILEGES;"
+          mysql -u root -e "CREATE DATABASE IF NOT EXISTS wordpress_test;"
+          mysql -u root -e "GRANT ALL PRIVILEGES ON wordpress_test.* TO 'root'@'localhost';"
+          mysql -u root -e "FLUSH PRIVILEGES;"
       - name: Install WP-CLI
         run: |
           curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
