fix: use GitHub service container for MySQL in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,6 +70,15 @@ jobs:
     strategy:
       matrix:
         php-version: [8.4]
+    services:
+      mysql:
+        image: mysql:8.0
+        env:
+          MYSQL_ROOT_PASSWORD: root
+          MYSQL_DATABASE: wordpress_test
+        ports:
+          - 3306:3306
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
     steps:
       - uses: actions/checkout@v4
       - name: Set up PHP
@@ -79,11 +88,6 @@ jobs:
           extensions: mbstring, intl, xdebug
       - name: Install Composer dependencies
         run: composer install --prefer-dist --no-progress
-      - name: Set up MySQL
-        run: |
-          mysql -u root -e "CREATE DATABASE IF NOT EXISTS wordpress_test;"
-          mysql -u root -e "GRANT ALL PRIVILEGES ON wordpress_test.* TO 'root'@'localhost';"
-          mysql -u root -e "FLUSH PRIVILEGES;"
       - name: Install WP-CLI
         run: |
           curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
