--- a/wp-content/plugins/wp-qr-trackr/package.json
+++ b/wp-content/plugins/wp-qr-trackr/package.json
@@ -4,11 +4,16 @@
   "private": true,
   "scripts": {
     "lint": "eslint \"**/*.js\"",
-    "stylelint": "stylelint \"**/*.css\""
+    "stylelint": "stylelint \"**/*.css\"",
+    "prepare": "husky install"
   },
   "devDependencies": {
+    "@wordpress/eslint-plugin": "^17.0.0",
     "eslint": "^9.0.0",
+    "eslint-config-wordpress": "^2.0.0",
+    "husky": "^9.1.7",
     "stylelint": "^16.3.1",
-    "stylelint-config-standard": "^38.0.0"
+    "stylelint-config-standard": "^38.0.0",
+    "stylelint-config-wordpress": "^21.0.0"
   }
 }
