--- a/wp-content/plugins/wp-qr-trackr/.stylelintrc.json
+++ b/wp-content/plugins/wp-qr-trackr/.stylelintrc.json
@@ -1,3 +1,10 @@
 {
-  "extends": "stylelint-config-standard"
+	"extends": [
+		"@wordpress/stylelint-config"
+	],
+	"rules": {
+		"no-descending-specificity": null,
+		"font-family-no-missing-generic-family-keyword": null,
+		"selector-class-pattern": null
+	}
 } 
