--- a/wp-content/plugins/wp-qr-trackr/package.json
+++ b/wp-content/plugins/wp-qr-trackr/package.json
@@ -14,6 +14,6 @@
     "husky": "^9.1.7",
     "stylelint": "^16.3.1",
     "stylelint-config-standard": "^38.0.0",
-    "stylelint-config-wordpress": "^21.0.0"
+    "@wordpress/stylelint-config": "^21.0.0"
   }
 }
