fix: update husky configuration to use postinstall hook

--- a/wp-content/plugins/wp-qr-trackr/package.json
+++ b/wp-content/plugins/wp-qr-trackr/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "eslint \"**/*.js\" --ignore-pattern .eslintrc.js",
     "stylelint": "stylelint \"**/*.css\"",
-    "prepare": "husky install"
+    "postinstall": "husky"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
