chore: upgrade Stylelint to v15+ and update config to use stylelint-config-standard

--- a/wp-content/plugins/wp-qr-trackr/.stylelintrc.json
+++ b/wp-content/plugins/wp-qr-trackr/.stylelintrc.json
@@ -1,6 +1,6 @@
 {
 	"extends": [
-		"@wordpress/stylelint-config"
+		"stylelint-config-standard"
 	],
 	"rules": {
 		"no-descending-specificity": null,
