--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,60 @@ wp-config.php
 .phpunit.result.cache
 .phpunit.cache/
 node_modules
+
+# Build artifacts
+*.zip
+*.tar.gz
+*.phar
+build/
+dist/
+
+# Dependencies
+/vendor/
+/node_modules/
+/.yarn/
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+
+# IDE and editor files
+.idea/
+.vscode/
+*.swp
+*.swo
+.DS_Store
+Thumbs.db
+
+# WordPress
+wp/
+wp-tests-lib/
+wp-content/uploads/
+wp-content/upgrade/
+wp-content/backup-db/
+wp-content/cache/
+wp-content/backups/
+
+# Environment files
+.env
+.env.*
+!.env.example
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Test coverage
+coverage/
+.coverage
+coverage.xml
+htmlcov/
+
+# Temporary files
+*.tmp
+*.temp
+.cache/
