--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "devDependencies": {
     "eslint": "^9.0.0",
     "husky": "^9.1.7",
+    "lint-staged": "^16.1.2",
     "stylelint": "^16.20.0",
     "stylelint-config-standard": "^38.0.0"
   },
   "scripts": {
     "setup:ci": "yarn install",
-    "lint": "cd wp-content/plugins/wp-qr-trackr && yarn lint",
-    "stylelint": "cd wp-content/plugins/wp-qr-trackr && yarn stylelint",
+    "lint": "eslint",
+    "stylelint": "stylelint",
     "postinstall": "husky"
   },
   "dependencies": {
