feat: Implement containerized testing and update docs
This commit introduces a fully containerized end-to-end testing environment using Docker, Playwright, and wp-cli. This removes all local dependencies for testing (PHP, Node, etc.), ensuring a consistent and portable testing process.

The README has been updated with comprehensive documentation on the new testing strategy, its advantages, complexities, and future opportunities for containerization. All temporary test scripts, debugging artifacts, and unnecessary files have been removed to clean up the repository.

--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "devDependencies": {
-    "eslint": "^9.0.0",
+    "@playwright/test": "^1.46.0",
+    "eslint": "^9.8.0",
+    "eslint-plugin-playwright": "^1.6.2",
     "husky": "^9.1.7",
-    "lint-staged": "^16.1.2",
+    "lint-staged": "^15.0.0",
     "stylelint": "^16.20.0",
     "stylelint-config-standard": "^38.0.0"
   },
@@ -10,7 +12,8 @@
     "setup:ci": "yarn install",
     "lint": "eslint",
     "stylelint": "stylelint",
-    "postinstall": "husky"
+    "postinstall": "husky",
+    "test:e2e": "playwright test scripts/playwright-wp-qr-trackr-userflow.test.js"
   },
   "dependencies": {
     "playwright": "^1.53.1"
