fix(ci): Overhaul and stabilize containerized test environment

--- a/Dockerfile.ci
+++ b/Dockerfile.ci
@@ -8,6 +8,7 @@ RUN apt-get update && apt-get install -y \
     nodejs \
     npm \
     default-mysql-client \
+    subversion \
     && npm install -g yarn \
     && rm -rf /var/lib/apt/lists/* \
     && docker-php-ext-install zip
